# mp3-player

./: Cargo.toml
src/: main.rs  widget.rs
src/widget/: footer.rs  main_panel.rs  sidebar.rs
